deselection of filter works, also the double scrollbar problem should now be fixed

--- a/src/app/nav/dashboard/comment/comment.component.scss
+++ b/src/app/nav/dashboard/comment/comment.component.scss
@@ -1,29 +1,29 @@
 @import '~@angular-mdc/theme/material';
 
 
-/* unvisited link */
-a:link {
-  color: hotpink;
-  text-decoration: none;
-}
+// /* unvisited link */
+// a:link {
+//   color: hotpink;
+//   text-decoration: none;
+// }
 
-/* visited link */
-a:visited {
-  color: hotpink;
-  text-decoration: none;
-}
+// /* visited link */
+// a:visited {
+//   color: hotpink;
+//   text-decoration: none;
+// }
 
-/* mouse over link */
-a:hover {
-  color: hotpink;
-  text-decoration: none;
-}
+// /* mouse over link */
+// a:hover {
+//   color: hotpink;
+//   text-decoration: none;
+// }
 
-/* selected link */
-a:active {
-  color: hotpink;
-  text-decoration: none;
-}
+// /* selected link */
+// a:active {
+//   color: hotpink;
+//   text-decoration: none;
+// }
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
   background-color: #eee;
